--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,23 @@
 body{
-
+background-image: url(pattern-background-desktop.svg);
+font-size: 11px;
+text-align: center;
+font-family: 'Red Hat Display', sans-serif;
 }
 
+
 .main-container{
-  width: 50px;
-  height: 50px;
+  align-items: center;
+  width: 366px;
+  height: 500px;
+  margin: auto;
+  border-radius: 25px;
+  border: none;
+  background-color: white;
+  }
+
+.top-img{
+  width: 366px;
+  align-items: center;
+  border-radius: 25px 25px 0 0;
 }
